src/test/deca/codegen/invalid/resultats/obj_null3-ima.res
Erreur : Dereferencement d'un objet null.
